
$Id: changes.txt,v 1.68 2006/04/25 16:15:03 vvd0 Exp $

----
MVDSV v0.19.14-develop build 2316 (2006.04.25)
- bugfix from 0.179b: SunOS on SPARC-64 didn't determine big endian
(Thanks to Krok)
- for developers: move all common tools functions from common.{c|h} and qwdtools/tools.{c|h}
  to bothtools.c and bothdefs.h
[server]
- added kqueue instead select for FreeBSD target: 'make -DKQUEUE' (EXPERIMENTAL)
- fixed number of sended packets while connect with sv_getrealip > 0 to 10
- improved spectator support in qvm mods:
  "seems spectator is sort of hack in QW, I let qvm mods serve spectator like we do for normal player"
(by qqshka)
- bugfix ktpro: forbid ';' as commands separator, because ktpro didn't quote arguments
  from admin users; example: cmd kick "X;quit" => kick X;quit => server will exit (EXPERIMENTAL)
- returned back sys_select_timeout:
  MUST be set to ~ (sv_mintic / 1.3) * 1 000 000 = 10 000
  (else can occur packets lost if sv_minping > 0)
  if set too low then occur higher CPU usage
  Example:
    1. sys_select_timeout 10000 + FreeBSD 4 =
       4-5% of CPU usage on empty server + sv_minping 39 + low packets lost
    2. sys_select_timeout 1000000 + FreeBSD 4 =
       0% of CPU usage on empty server + sv_minping 39 + ~20 packets lost
  Administrator can tune this cvar self.
  May be to make auto change sys_select_timeout on connect 1st user and disconnect last
  or/and set sv_minping...
  can set value only between 10 (10 microseconds) and 1 000 000 (1 second)
  default: 10000 (10 milliseconds)
- returned back and made cvar registered CVAR_ROM and seted value to 1;
  can't delete it because ktpro didn't allow to go at some placeses of, for example, start map
- bugfix: spectators can't hear say_team in qvm, qc-based mods not affected by this fix (by qqshka)
- ZQuake's pmove code (by disconnect)
- some ZQuake's Protocol Extensions: PM_TYPE, PM_TYPE_NEW, SERVERTIME, PF_ONGROUND (by disconnect)